# github-follower-notification

./: .gitignore  Cargo.toml
schemas/: schema.sql
scripts/: run.bat  run.sh
src/: lib.rs  main.rs
src/config/: mod.rs  settings.rs
src/handlers/: mod.rs  webhook.rs
src/models/: events.rs
src/services/: discord.rs  email.rs  mod.rs  slack.rs  telegram.rs  whatsapp.rs
