[package]
name = "github-notification-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
notify-rust = "4"
anyhow = "1.0"
async-trait = "0.1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
governor = "0.5"
lettre = "0.10"