[package]
name = "github-notification-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
notify-rust = "4"
anyhow = "1.0"
async-trait = "0.1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
governor = "0.5"
lettre = { version = "0.10", features = ["rustls-tls", "tokio1", "tokio1-rustls-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.4", features = ["trace", "cors"] }

[dev-dependencies]
tokio-test = "0.4"
mock-it = "0.4"
pretty_assertions = "1.4"